// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DSL checkDSL() invalid code should handle \`no definitions\` 1`] = `[]`;

exports[`DSL checkDSL() invalid code should handle \`no relations\` 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 1,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`and\` 1`] = `
[
  {
    "endColumn": 37,
    "endLineNumber": 4,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 28,
    "startLineNumber": 4,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`as\` 1`] = `
[
  {
    "endColumn": 26,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 19,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`as\` 2`] = `
[
  {
    "endColumn": 26,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 19,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`but not\` 1`] = `
[
  {
    "endColumn": 41,
    "endLineNumber": 4,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 32,
    "startLineNumber": 4,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`define\` 1`] = `
[
  {
    "endColumn": 27,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 6,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`or\` 1`] = `
[
  {
    "endColumn": 36,
    "endLineNumber": 4,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 27,
    "startLineNumber": 4,
  },
]
`;

exports[`DSL checkDSL() invalid keywords should handle invalid \`self\` 1`] = `
[
  {
    "endColumn": 26,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 24,
    "startLineNumber": 3,
  },
]
`;

exports[`DSL checkDSL() semantics should allow model with relations starting with as 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 15,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should allow self reference 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should be able to handle more than one error 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 6,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should handle duplicated definition 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 4,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`invalid and\` 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`invalid but not\` 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`invalid from\` 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`invalid or\` 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`relation not define\` 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`self-error\` 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should handle invalid \`self-ref in but not\` 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL checkDSL() semantics should not allow impossible self reference 1`] = `
[
  {
    "endColumn": 9007199254740991,
    "endLineNumber": 3,
    "message": "Invalid syntax",
    "severity": 8,
    "source": "linter",
    "startColumn": 0,
    "startLineNumber": 0,
  },
]
`;

exports[`DSL parseDSL() should correctly parse a complex sample 1`] = `
[
  {
    "comment": "",
    "relations": [
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
          ],
          "type": "single",
        },
        "relation": "member",
      },
    ],
    "type": "team",
  },
  {
    "comment": "",
    "relations": [
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
            {
              "from": "owner",
              "rewrite": "tuple_to_userset",
              "target": "repo_admin",
            },
          ],
          "type": "union",
        },
        "relation": "admin",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
            {
              "from": undefined,
              "rewrite": "computed_userset",
              "target": "admin",
            },
          ],
          "type": "union",
        },
        "relation": "maintainer",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
          ],
          "type": "single",
        },
        "relation": "owner",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
            {
              "from": undefined,
              "rewrite": "computed_userset",
              "target": "triager",
            },
            {
              "from": "owner",
              "rewrite": "tuple_to_userset",
              "target": "repo_reader",
            },
          ],
          "type": "union",
        },
        "relation": "reader",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
            {
              "from": undefined,
              "rewrite": "computed_userset",
              "target": "writer",
            },
          ],
          "type": "union",
        },
        "relation": "triager",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
            {
              "from": undefined,
              "rewrite": "computed_userset",
              "target": "maintainer",
            },
            {
              "from": "owner",
              "rewrite": "tuple_to_userset",
              "target": "repo_writer",
            },
          ],
          "type": "union",
        },
        "relation": "writer",
      },
    ],
    "type": "repo",
  },
  {
    "comment": "",
    "relations": [
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
            {
              "from": undefined,
              "rewrite": "computed_userset",
              "target": "owner",
            },
          ],
          "type": "union",
        },
        "relation": "billing_manager",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
            {
              "from": undefined,
              "rewrite": "computed_userset",
              "target": "owner",
            },
          ],
          "type": "union",
        },
        "relation": "member",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
          ],
          "type": "single",
        },
        "relation": "owner",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
          ],
          "type": "single",
        },
        "relation": "repo_admin",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
          ],
          "type": "single",
        },
        "relation": "repo_reader",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
          ],
          "type": "single",
        },
        "relation": "repo_writer",
      },
    ],
    "type": "org",
  },
  {
    "comment": "",
    "relations": [
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
            {
              "from": "owner",
              "rewrite": "tuple_to_userset",
              "target": "owner",
            },
          ],
          "type": "union",
        },
        "relation": "app_manager",
      },
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
          ],
          "type": "single",
        },
        "relation": "owner",
      },
    ],
    "type": "app",
  },
]
`;

exports[`DSL parseDSL() should correctly parse a simple sample 1`] = `
[
  {
    "comment": "",
    "relations": [
      {
        "comment": "",
        "definition": {
          "targets": [
            {
              "from": undefined,
              "rewrite": "direct",
              "target": undefined,
            },
          ],
          "type": "single",
        },
        "relation": "writer",
      },
    ],
    "type": "group",
  },
]
`;

exports[`DSL parseDSL() should correctly parse a type with no relations 1`] = `
[
  {
    "comment": "",
    "relations": [],
    "type": "group",
  },
]
`;
